feat: hyprland.confにデーモンの追加

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -1,42 +1,13 @@
-env = LIBVA_DRIVER_NAME,nvidia
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-# bind = Ctrl, Return, exec, ghostty
-bind = Ctrl, Space, exec, wofi --show drun
-bind = SUPER CTRL, Q, exec, hyprlock
-bind = SUPER SHIFT, Q, exec, wlogout
-exec-once = fcitx5
-exec-once = hypridle
-exec-once = 1password --silent
+###############
+### モニター ###
+###############
 
-### モニターとか
+# モニターを確認するコマンド: `hyprctl monitors all`
+
 monitor = DP-5, 3440x1440, 0x0, 1
 monitor = DP-4, 2560x1440, 3440x-250, 1, transform, 1
 workspace = 1, monitor:DP-5, default:true
 workspace = 9, monitor:DP-4, default:true
-
-### ターミナルホットキー
-# titleにfloatを指定したghosttyのウィンドウを最初に起動して、それが $terminalWorkspace に表示されるようにする
-# TODO: titleではなくclassを指定できるようにしたい
-$terminalWorkspace = terminal
-workspace = special:$terminalWorkspace, monitor:DP-5
-windowrulev2 = float,class:com.mitchellh.ghostty,title:float
-windowrulev2 = center,class:com.mitchellh.ghostty,title:float
-windowrulev2 = size 50% 65%,class:com.mitchellh.ghostty,title:float
-windowrulev2 = workspace special:$terminalWorkspace,class:com.mitchellh.ghostty,title:float
-bind = ALT, Space, togglespecialworkspace, $terminalWorkspace
-exec-once = ghostty --background-opacity=0.8 --title=float
-
-# example
-# This is an example Hyprland configq file.
-# Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/
-
-# Please note not all available settings / options are set here.
-# For a full list, see the wiki
-
-# You can split this configuration into multiple files
-# Create your files separately and then link them to this file like this:
-# source = ~/.config/hypr/myColors.conf
 
 ###################
 ### MY PROGRAMS ###
@@ -49,6 +20,13 @@ $terminal = ghostty
 $fileManager = dolphin
 $menu = wofi --show drun
 
+exec-once = fcitx5 &
+exec-once = hypridle &
+exec-once = 1password --silent &
+exec-once = dropbox &
+exec-once = waybar &
+exec-once = dunst &
+exec-once = swww-daemon &
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -56,6 +34,8 @@ $menu = wofi --show drun
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
+env = LIBVA_DRIVER_NAME,nvidia
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
 
@@ -69,7 +49,7 @@ env = HYPRCURSOR_SIZE,24
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
 
     border_size = 2
 
@@ -210,6 +190,10 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
+bind = Ctrl, Space, exec, wofi --show drun
+bind = SUPER CTRL, Q, exec, hyprlock
+bind = SUPER SHIFT, Q, exec, wlogout
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, killactive,
 bind = $mainMod, C, togglefloating,
@@ -298,6 +282,22 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
+
+# dunst
+bind = $mainMod, F12, exec, dunstctl close
+
+### ターミナルホットキー
+# titleにfloatを指定したghosttyのウィンドウを最初に起動して、それが $terminalWorkspace に表示されるようにする
+# TODO: titleではなくclassを指定できるようにしたい
+$terminalWorkspace = terminal
+workspace = special:$terminalWorkspace, monitor:DP-5
+windowrulev2 = monitor: DP-5,class:com.mitchellh.ghostty,title:float
+windowrulev2 = workspace special:$terminalWorkspace,class:com.mitchellh.ghostty,title:float
+windowrulev2 = float,class:com.mitchellh.ghostty,title:float
+windowrulev2 = center,class:com.mitchellh.ghostty,title:float
+windowrulev2 = size 50% 65%,class:com.mitchellh.ghostty,title:float
+bind = ALT, Space, togglespecialworkspace, $terminalWorkspace
+exec-once = ghostty --background-opacity=0.8 --title=float
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
