--- a/config/hypr/hyprlock.conf
+++ b/config/hypr/hyprlock.conf
@@ -32,7 +32,7 @@ input-field {
     font_color = rgb(200, 200, 200)
     fade_on_empty = false
     font_family = JetBrains Mono Nerd Font Mono
-    placeholder_text = <i><span foreground="##cdd6f4">Input Password...</span></i>
+    placeholder_text = <span foreground="##cdd6f4">Enter</span>
     hide_input = false
     position = 0, -120
     halign = center
@@ -42,11 +42,11 @@ input-field {
 # TIME
 label {
     monitor =
-    text = cmd[update:1000] echo "$(date +"%-I:%M%p")"
+    text = cmd[update:1000] echo "$(date +"%H:%M")"
     # color = $foreground
     color = rgba(255, 255, 255, 0.6)
     font_size = 120
-    font_family = JetBrains Mono Nerd Font Mono ExtraBold
+    font_family = Noto Sans CJK JP Medium
     position = 0, -300
     halign = center
     valign = top
