--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -19,3 +19,5 @@ delta = "latest"
 lazygit = "latest"
 "go:github.com/go-task/task/v3/cmd/task" = "latest"
 "ubi:tstack/lnav" = "latest"
+bottom = "latest"
+"npm:czg" = "latest"
