feat: hyprlandのワークスペース設定など

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,6 +7,8 @@
 monitor = DP-5, 3440x1440, 0x0, 1
 monitor = DP-4, 2560x1440, 3440x-250, 1, transform, 1
 workspace = 1, monitor:DP-5, default:true
+workspace = 2, monitor:DP-5, default:true
+workspace = 3, monitor:DP-5, default:true
 workspace = 9, monitor:DP-4, default:true
 
 ###################
@@ -18,10 +20,10 @@ workspace = 9, monitor:DP-4, default:true
 # Set programs that you use
 $terminal = ghostty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = rofi -show drun
 
+exec-once = hypridle
 exec-once = fcitx5 &
-exec-once = hypridle &
 exec-once = 1password --silent &
 exec-once = dropbox &
 exec-once = waybar &
@@ -190,7 +192,7 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-bind = Ctrl, Space, exec, wofi --show drun
+bind = Ctrl, Space, exec, $menu
 bind = SUPER CTRL, Q, exec, hyprlock
 bind = SUPER SHIFT, Q, exec, wlogout
 
@@ -201,7 +203,6 @@ bind = $mainMod, C, centerwindow,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, D, togglesplit, # dwindle
 
