--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -14,9 +14,10 @@
     },
     "version": "2"
   },
+  "vim_mode": true,
   "buffer_font_family": "HackGen35 Console NF",
   "ui_font_size": 16,
-  "buffer_font_size": 16,
+  "buffer_font_size": 15,
   "theme": {
     "mode": "dark",
     "light": "One Light",
