--- a/config/zed/settings.json
+++ b/config/zed/settings.json
@@ -14,7 +14,7 @@
     },
     "version": "2"
   },
-  "vim_mode": true,
+  "vim_mode": false,
   "buffer_font_family": "HackGen35 Console NF",
   "ui_font_size": 16,
   "buffer_font_size": 15,
