feat: cliphistの設定を追加

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -29,6 +29,7 @@ exec-once = dropbox &
 exec-once = waybar &
 exec-once = dunst &
 exec-once = swww-daemon &
+exec-once = wl-paste --watch cliphist store -max-items 20
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -195,6 +196,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = Ctrl, Space, exec, $menu
 bind = SUPER CTRL, Q, exec, hyprlock
 bind = SUPER SHIFT, Q, exec, wlogout
+bind = SUPER CTRL, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, killactive,
