--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -29,7 +29,8 @@ exec-once = dropbox &
 exec-once = waybar &
 exec-once = dunst &
 exec-once = swww-daemon &
-exec-once = wl-paste --watch cliphist store -max-items 20
+exec-once = wl-paste --type image --watch cliphist store -max-items 20
+exec-once = wl-paste --type text --watch cliphist store -max-items 20
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -196,7 +197,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = Ctrl, Space, exec, $menu
 bind = SUPER CTRL, Q, exec, hyprlock
 bind = SUPER SHIFT, Q, exec, wlogout
-bind = SUPER CTRL, V, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+bind = SUPER CTRL, V, exec, rofi -modi clipboard:~/.config/cliphist/cliphist-rofi-img -show clipboard -show-icons
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, killactive,
