--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -204,7 +204,6 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, C, togglefloating,
 bind = $mainMod, C, centerwindow,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, D, togglesplit, # dwindle
@@ -289,6 +288,10 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # dunst
 bind = $mainMod, F12, exec, dunstctl close
+
+# Screenshots
+bind = Ctrl Shift, 3, exec, hyprctl -j activewindow | jq -r '"\(.at[0]),\(.at[1]) \(.size[0])x\(.size[1])"' | grim -g - - | swappy -f -
+bind = Ctrl Shift, 4, exec, slurp | grim -g - - | swappy -f -
 
 ### ターミナルホットキー
 # titleにfloatを指定したghosttyのウィンドウを最初に起動して、それが $terminalWorkspace に表示されるようにする
