--- a/config/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace.toml
@@ -105,12 +105,24 @@ ctrl-alt-h = 'focus left'
 ctrl-alt-j = 'focus down'
 ctrl-alt-k = 'focus up'
 ctrl-alt-l = 'focus right'
+ctrl-alt-left = 'focus left'
+ctrl-alt-down = 'focus down'
+ctrl-alt-up = 'focus up'
+ctrl-alt-right = 'focus right'
+
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#move
 ctrl-alt-shift-h = 'move left'
 ctrl-alt-shift-j = 'move down'
 ctrl-alt-shift-k = 'move up'
 ctrl-alt-shift-l = 'move right'
+ctrl-alt-shift-left = 'move left'
+ctrl-alt-shift-down = 'move down'
+ctrl-alt-shift-up = 'move up'
+ctrl-alt-shift-right = 'move right'
+
+ctrl-alt-z = 'move-node-to-monitor --focus-follows-window --wrap-around next'
+ctrl-alt-shift-z = 'move-node-to-monitor --focus-follows-window --wrap-around prev'
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#resize
 ctrl-alt-minus = 'resize smart -50'
@@ -190,6 +202,8 @@ ctrl-alt-shift-9 = 'move-node-to-workspace 9'
 ctrl-alt-tab = 'workspace next'
 ctrl-alt-shift-tab = 'workspace prev'
 
+ctrl-alt-enter = 'fullscreen'
+
 # See: https://nikitabobko.github.io/AeroSpace/commands#mode
 ctrl-alt-shift-semicolon = 'mode service'
 
@@ -216,6 +230,27 @@ down = 'volume down'
 up = 'volume up'
 shift-down = ['volume set 0', 'mode main']
 
+# app-idは `aerospace list-apps` で取得できる
 [[on-window-detected]]
 if.app-id = 'com.googlecode.iterm2'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'cc.ffitch.shottr'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'company.thebrowser.Browser'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'com.gather.Gather'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'com.1password.1password'
+run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'com.apple.ActivityMonitor'
 run = 'layout floating'
