--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -3,9 +3,8 @@ macos-option-as-alt = "left"
 font-size = "14"
 quick-terminal-position = center
 quick-terminal-animation-duration = 0
-keybind = global:alt+space=toggle_quick_terminal
+# keybind = global:alt+space=toggle_quick_terminal
 theme = "iceberg-dark"
 background-opacity = 0.9
-config-file = ?local.conf
 gtk-titlebar = false
 gtk-tabs-location = bottom
