--- a/config/git/config
+++ b/config/git/config
@@ -46,9 +46,10 @@
 	autocrlf = input
 [ghq]
 	root = ~/src
+	user = chouxcreams
 [credential "https://github.com"]
-	helper = 
+	helper = !/opt/homebrew/bin/gh auth git-credential
 	helper = !/usr/bin/gh auth git-credential
 [credential "https://gist.github.com"]
-	helper = 
+	helper = !/opt/homebrew/bin/gh auth git-credential
 	helper = !/usr/bin/gh auth git-credential
