feat: ghq移動をzenoプラグインに変更

--- a/config/sheldon/plugins.toml
+++ b/config/sheldon/plugins.toml
@@ -44,6 +44,8 @@ __zeno_keybind() {
   fi
 }
 zsh-defer __zeno_keybind
+
+alias gg='zeno-ghq-cd'
 """
 hooks.pre = """
 export ZENO_COMPLETION_FALLBACK=expand-or-complete
