feat: aerospaceの設定追加

--- a/config/aerospace/aerospace.toml
+++ b/config/aerospace/aerospace.toml
@@ -270,3 +270,7 @@ run = 'layout floating'
 [[on-window-detected]]
 if.app-id = 'com.tinyapp.TablePlus'
 run = 'layout floating'
+
+[[on-window-detected]]
+if.app-id = 'com.cisco.anyconnect.gui'
+run = 'layout floating'
