feat: hyprlandにウィンドウのディスプレイ移動の設定を追加

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -4,11 +4,11 @@
 
 # モニターを確認するコマンド: `hyprctl monitors all`
 
-monitor = DP-5, 3440x1440, 0x0, 1
+monitor = DP-3, 3440x1440, 0x0, 1
 monitor = DP-4, 2560x1440, 3440x-250, 1, transform, 1
-workspace = 1, monitor:DP-5, default:true
-workspace = 2, monitor:DP-5, default:true
-workspace = 3, monitor:DP-5, default:true
+workspace = 1, monitor:DP-3, default:true
+workspace = 2, monitor:DP-3, default:true
+workspace = 3, monitor:DP-3, default:true
 workspace = 9, monitor:DP-4, default:true
 
 ###################
@@ -174,11 +174,6 @@ input {
     }
 }
 
-# https://wiki.hyprland.org/Configuring/Variables/#gestures
-gestures {
-    workspace_swipe = false
-}
-
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
@@ -204,7 +199,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, C, togglefloating,
 bind = $mainMod, C, centerwindow,
 bind = $mainMod, M, exit,
-bind = $mainMod, V, togglefloating,
+bind = $mainMod, F, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, D, togglesplit, # dwindle
 
@@ -229,6 +224,10 @@ bind = $mainMod SHIFT, left, swapwindow, l
 bind = $mainMod SHIFT, right, swapwindow, r
 bind = $mainMod SHIFT, up, swapwindow, u
 bind = $mainMod SHIFT, down, swapwindow, d
+bind = $mainMod SHIFT, z, movewindow
+
+# ウィンドウを次のモニターに移動
+bind = $mainMod, z, movewindow, mon:+1
 
 # フォーカスがあたったウィンドウのリサイズ
 bind = $mainMod, equal, resizeactive, 20 20
@@ -297,8 +296,8 @@ bind = Ctrl Shift, 4, exec, slurp | grim -g - - | swappy -f -
 # titleにfloatを指定したghosttyのウィンドウを最初に起動して、それが $terminalWorkspace に表示されるようにする
 # TODO: titleではなくclassを指定できるようにしたい
 $terminalWorkspace = terminal
-workspace = special:$terminalWorkspace, monitor:DP-5
-windowrulev2 = monitor: DP-5,class:com.mitchellh.ghostty,title:float
+workspace = special:$terminalWorkspace, monitor:DP-3
+windowrulev2 = monitor: DP-3,class:com.mitchellh.ghostty,title:float
 windowrulev2 = workspace special:$terminalWorkspace,class:com.mitchellh.ghostty,title:float
 windowrulev2 = float,class:com.mitchellh.ghostty,title:float
 windowrulev2 = center,class:com.mitchellh.ghostty,title:float
