--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -191,7 +191,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = Ctrl, Space, exec, $menu
 bind = SUPER CTRL, Q, exec, hyprlock
-bind = SUPER SHIFT, Q, exec, wlogout
+bind = SUPER SHIFT, Q, exec, wlogout -b 4
 bind = SUPER CTRL, V, exec, rofi -modi clipboard:~/.config/cliphist/cliphist-rofi-img -show clipboard -show-icons
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
