--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -31,6 +31,7 @@ exec-once = dunst &
 exec-once = swww-daemon &
 exec-once = wl-paste --type image --watch cliphist store -max-items 20
 exec-once = wl-paste --type text --watch cliphist store -max-items 20
+exec-once = swayosd-server
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -271,13 +272,13 @@ bindm = Ctrl, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 bindm = Ctrl, mouse:273, resizewindow
 
-# Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+# Laptop multimedia keys for volume and LCD brightness (swayosd)
+bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
+bindel = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
+bindel = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
+bindel = ,XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
+bindel = ,XF86MonBrightnessUp, exec, swayosd-client --brightness raise
+bindel = ,XF86MonBrightnessDown, exec, swayosd-client --brightness lower
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
