--- a/config/zeno/config.yml
+++ b/config/zeno/config.yml
@@ -128,6 +128,22 @@ snippets:
     keyword: ghce
     snippet: gh copilot explain
 
+  - name: fzf-make
+    keyword: fm
+    snippet: fzf-make
+
+  - name: fzf-make repeat
+    keyword: r
+    snippet: repeat
+    context:
+      lbuffer: "^fzf-make"
+
+  - name: fzf-make history
+    keyword: h
+    snippet: history
+    context:
+      lbuffer: "^fzf-make"
+
   - name: "null"
     keyword: "null"
     snippet: ">/dev/null 2>&1"
