feat: tmuxにlazygitの設定を追加

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -8,5 +8,7 @@ set -g @plugin 'tmux-plugins/tmux-sidebar'
 # マウス操作を有効にする
 set-option -g mouse on
 
+bind C-d popup -xC -yC -w95% -h95% -E -d "#{pane_current_path}" "lazygit"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
