--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -2,6 +2,8 @@ set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'vaaleyard/tmux-dotbar'
+set -g @tmux-dotbar-right "true"
+
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
 
