feat: tmuxの設定更新

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -5,7 +5,8 @@ set -g @plugin 'vaaleyard/tmux-dotbar'
 set -g @tmux-dotbar-right "true"
 
 set -g @plugin 'tmux-plugins/tmux-pain-control'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'sainnhe/tmux-fzf'
+bind-key "space" run-shell -b "${HOME}/.config/tmux/plugins/tmux-fzf/scripts/window.sh switch" # `prefix + space`で起動
 
 # マウス操作を有効にする
 set-option -g mouse on
