--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -12,6 +12,17 @@ bind-key "space" run-shell -b "${HOME}/.config/tmux/plugins/tmux-fzf/scripts/win
 set-option -g mouse on
 
 bind C-d popup -xC -yC -w95% -h95% -E -d "#{pane_current_path}" "lazygit"
+bind f resize-pane -Z
+
+# Alt + hjkl でペイン移動
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# Alt + ←→ でウィンドウ移動
+bind -n M-left previous-window
+bind -n M-right next-window
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
