feat: tmuxの設定更新

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -12,7 +12,7 @@ bind-key "space" run-shell -b "${HOME}/.config/tmux/plugins/tmux-fzf/scripts/win
 set-option -g mouse on
 
 bind C-d popup -xC -yC -w95% -h95% -E -d "#{pane_current_path}" "lazygit"
-bind f resize-pane -Z
+bind -n M-f resize-pane -Z
 
 # Alt + hjkl でペイン移動
 bind -n M-h select-pane -L
