tmuxの設定変更

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -12,6 +12,7 @@ bind-key "space" run-shell -b "${HOME}/.config/tmux/plugins/tmux-fzf/scripts/win
 set-option -g mouse on
 
 bind C-d popup -xC -yC -w95% -h95% -E -d "#{pane_current_path}" "lazygit"
+bind C-a popup -xC -yC -w95% -h95% -E -d "#{pane_current_path}" "diff-tui"
 bind -n M-f resize-pane -Z
 
 # Alt + hjkl でペイン移動
