--- a/config/git/config
+++ b/config/git/config
@@ -17,6 +17,8 @@
 	log = delta
 	reflog = delta
 	show = delta
+[diff]
+	tool = critique
 
 [delta]
 	navigate = true
@@ -54,3 +56,5 @@
 [credential "https://gist.github.com"]
 	helper = !/opt/homebrew/bin/gh auth git-credential
 	helper = !/usr/bin/gh auth git-credential
+[difftool "critique"]
+	cmd = critique difftool \"$LOCAL\" \"$REMOTE\"
