feat: tmuxへのplugin追加と、lazygit周りの設定変更

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -8,10 +8,13 @@ set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'sainnhe/tmux-fzf'
 bind-key "space" run-shell -b "${HOME}/.config/tmux/plugins/tmux-fzf/scripts/window.sh switch" # `prefix + space`で起動
 
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
 # マウス操作を有効にする
 set-option -g mouse on
 
-bind C-d popup -xC -yC -w95% -h95% -E -d "#{pane_current_path}" "lazygit"
+bind C-a popup -xC -yC -w95% -h95% -E -d "#{pane_current_path}" 'PATH="$HOME/.cache/.bun/bin:$PATH" lazygit' # lazygit上でbunを正しく開くためにbunのpathを渡す
 bind -n M-f resize-pane -Z
 
 # Alt + hjkl でペイン移動
