--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -10,6 +10,8 @@ bind-key "space" run-shell -b "${HOME}/.config/tmux/plugins/tmux-fzf/scripts/win
 
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @fzf-url-bind 'o'
 
 # マウス操作を有効にする
 set-option -g mouse on
