feat: lazygitのtmux上でのキーバインドを変更

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -16,7 +16,7 @@ set -g @fzf-url-bind 'o'
 # マウス操作を有効にする
 set-option -g mouse on
 
-bind C-a popup -xC -yC -w95% -h95% -E -d "#{pane_current_path}" 'PATH="$HOME/.cache/.bun/bin:$PATH" lazygit' # lazygit上でbunを正しく開くためにbunのpathを渡す
+bind \; popup -xC -yC -w95% -h95% -E -d "#{pane_current_path}" 'PATH="$HOME/.cache/.bun/bin:$PATH" lazygit' # lazygit上でbunを正しく開くためにbunのpathを渡す
 bind -n M-f resize-pane -Z
 
 # Alt + hjkl でペイン移動
