feat: tmuxの設定更新

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -12,6 +12,7 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @fzf-url-bind 'o'
+set -g @plugin 'laktak/extrakto'
 
 # マウス操作を有効にする
 set-option -g mouse on
@@ -28,6 +29,10 @@ bind -n M-l select-pane -R
 # Alt + ←→ でウィンドウ移動
 bind -n M-left previous-window
 bind -n M-right next-window
+
+# Alt + tab でウィンドウ移動(mac用)
+bind -n M-H previous-window
+bind -n M-L next-window
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.config/tmux/plugins/tpm/tpm'
