--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -1,5 +1,4 @@
 set -g @plugin 'tmux-plugins/tpm'
-
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'vaaleyard/tmux-dotbar'
 set -g @tmux-dotbar-right "true"
@@ -13,6 +12,14 @@ set -g @plugin 'tmux-plugins/tmux-continuum'
 set -g @plugin 'wfxr/tmux-fzf-url'
 set -g @fzf-url-bind 'o'
 set -g @plugin 'laktak/extrakto'
+
+# vim-tmux-navigator
+set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @vim_navigator_mapping_left "C-Left C-h"  # use C-h and C-Left
+# set -g @vim_navigator_mapping_right "C-Right C-l"
+# set -g @vim_navigator_mapping_up "C-k"
+# set -g @vim_navigator_mapping_down "C-j"
+# set -g @vim_navigator_mapping_prev ""  # removes the C-\ binding
 
 # マウス操作を有効にする
 set-option -g mouse on
