--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -328,3 +328,39 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+
+### noctalia-shell ###
+exec-once = qs -c noctalia-shell
+
+general {
+  gaps_in = 5
+  gaps_out = 10
+}
+
+decoration {
+  rounding = 20
+  rounding_power = 2
+
+  shadow {
+    enabled = true
+    range = 4
+    render_power = 3
+    color = rgba(1a1a1aee)
+  }
+
+  blur {
+    enabled = true
+    size = 3
+    passes = 2
+    vibrancy = 0.1696
+  }
+}
+
+layerrule {
+  name = noctalia
+  match:namespace = noctalia-background-.*$
+  ignore_alpha = 0.5
+  blur = true
+  blur_popups = true
+}
