--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -20,18 +20,21 @@ workspace = 9, monitor:DP-4, default:true
 # Set programs that you use
 $terminal = ghostty
 $fileManager = dolphin
-$menu = rofi -show drun
+$menu = qs -c noctalia-shell ipc call launcher toggle
+
+# LGモニター(NVIDIA HDMI)をデフォルト音声出力に設定
+exec-once = pactl set-default-sink alsa_output.pci-0000_09_00.1.hdmi-stereo
 
 exec-once = hypridle
 exec-once = fcitx5 &
 exec-once = 1password --silent &
 exec-once = dropbox &
-exec-once = waybar &
-exec-once = dunst &
-exec-once = swww-daemon &
+# exec-once = waybar &
+# exec-once = dunst &
+# exec-once = swww-daemon &
 exec-once = wl-paste --type image --watch cliphist store -max-items 20
 exec-once = wl-paste --type text --watch cliphist store -max-items 20
-exec-once = swayosd-server
+# exec-once = swayosd-server
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -49,110 +52,7 @@ env = HYPRCURSOR_SIZE,24
 ### LOOK AND FEEL ###
 #####################
 
-# Refer to https://wiki.hyprland.org/Configuring/Variables/
-
-# https://wiki.hyprland.org/Configuring/Variables/#general
-general {
-    gaps_in = 5
-    gaps_out = 10
-
-    border_size = 2
-
-    # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
-
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
-    resize_on_border = false
-
-    # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
-    allow_tearing = false
-
-    layout = dwindle
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#decoration
-decoration {
-    rounding = 10
-
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
-
-    shadow {
-        enabled = true
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
-    }
-
-    # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 3
-        passes = 1
-
-        vibrancy = 0.1696
-    }
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#animations
-animations {
-    enabled = yes, please :)
-
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
-    bezier = easeOutQuint,0.23,1,0.32,1
-    bezier = easeInOutCubic,0.65,0.05,0.36,1
-    bezier = linear,0,0,1,1
-    bezier = almostLinear,0.5,0.5,0.75,1.0
-    bezier = quick,0.15,0,0.1,1
-
-    animation = global, 1, 10, default
-    animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
-    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-    animation = windowsOut, 1, 1.49, linear, popin 87%
-    animation = fadeIn, 1, 1.73, almostLinear
-    animation = fadeOut, 1, 1.46, almostLinear
-    animation = fade, 1, 3.03, quick
-    animation = layers, 1, 3.81, easeOutQuint
-    animation = layersIn, 1, 4, easeOutQuint, fade
-    animation = layersOut, 1, 1.5, linear, fade
-    animation = fadeLayersIn, 1, 1.79, almostLinear
-    animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
-}
-
-# Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
-# "Smart gaps" / "No gaps when only"
-# uncomment all if you wish to use that.
-# workspace = w[tv1], gapsout:0, gapsin:0
-# workspace = f[1], gapsout:0, gapsin:0
-# windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
-# windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
-# windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
-
-# See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
-dwindle {
-    pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
-    preserve_split = true # You probably want this
-}
-
-# See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-master {
-    new_status = master
-}
-
-# https://wiki.hyprland.org/Configuring/Variables/#misc
-misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
-}
-
+source = ./hyprland.conf.d/look-and-feel.conf
 
 #############
 ### INPUT ###
@@ -182,129 +82,11 @@ device {
     sensitivity = -0.5
 }
 
-
 ###################
 ### KEYBINDINGS ###
 ###################
 
-# See https://wiki.hyprland.org/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
-
-bind = Ctrl, Space, exec, $menu
-bind = SUPER CTRL, Q, exec, hyprlock
-bind = SUPER SHIFT, Q, exec, wlogout -b 4
-bind = SUPER CTRL, V, exec, rofi -modi clipboard:~/.config/cliphist/cliphist-rofi-img -show clipboard -show-icons
-
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, killactive,
-bind = $mainMod, C, togglefloating,
-bind = $mainMod, C, centerwindow,
-bind = $mainMod, M, exit,
-bind = $mainMod, F, togglefloating,
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, D, togglesplit, # dwindle
-
-# Move focus with mainMod + arrow keys
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
-
-# Vimライクなキーバインドでも
-bind = $mainMod, h, movefocus, l
-bind = $mainMod, l, movefocus, r
-bind = $mainMod, k, movefocus, u
-bind = $mainMod, j, movefocus, d
-
-# ウィンドウの移動
-bind = $mainMod SHIFT, h, swapwindow, l
-bind = $mainMod SHIFT, k, swapwindow, u
-bind = $mainMod SHIFT, l, swapwindow, r
-bind = $mainMod SHIFT, j, swapwindow, d
-bind = $mainMod SHIFT, left, swapwindow, l
-bind = $mainMod SHIFT, right, swapwindow, r
-bind = $mainMod SHIFT, up, swapwindow, u
-bind = $mainMod SHIFT, down, swapwindow, d
-bind = $mainMod SHIFT, z, movewindow
-
-# ウィンドウを次のモニターに移動
-bind = $mainMod, z, movewindow, mon:+1
-
-# フォーカスがあたったウィンドウのリサイズ
-bind = $mainMod, equal, resizeactive, 20 20
-bind = $mainMod, minus, resizeactive, -20 -20
-
-# Switch workspaces with mainMod + [0-9]
-bind = $mainMod, 1, workspace, 1
-bind = $mainMod, 2, workspace, 2
-bind = $mainMod, 3, workspace, 3
-bind = $mainMod, 4, workspace, 4
-bind = $mainMod, 5, workspace, 5
-bind = $mainMod, 6, workspace, 6
-bind = $mainMod, 7, workspace, 7
-bind = $mainMod, 8, workspace, 8
-bind = $mainMod, 9, workspace, 9
-bind = $mainMod, 0, workspace, 10
-
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
-
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
-
-# Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
-
-# Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = Ctrl, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-bindm = Ctrl, mouse:273, resizewindow
-
-# Laptop multimedia keys for volume and LCD brightness (swayosd)
-bindel = ,XF86AudioRaiseVolume, exec, swayosd-client --output-volume raise
-bindel = ,XF86AudioLowerVolume, exec, swayosd-client --output-volume lower
-bindel = ,XF86AudioMute, exec, swayosd-client --output-volume mute-toggle
-bindel = ,XF86AudioMicMute, exec, swayosd-client --input-volume mute-toggle
-bindel = ,XF86MonBrightnessUp, exec, swayosd-client --brightness raise
-bindel = ,XF86MonBrightnessDown, exec, swayosd-client --brightness lower
-
-# Requires playerctl
-bindl = , XF86AudioNext, exec, playerctl next
-bindl = , XF86AudioPause, exec, playerctl play-pause
-bindl = , XF86AudioPlay, exec, playerctl play-pause
-bindl = , XF86AudioPrev, exec, playerctl previous
-
-# dunst
-bind = $mainMod, F12, exec, dunstctl close
-
-# Screenshots
-bind = Ctrl Shift, 3, exec, hyprctl -j activewindow | jq -r '"\(.at[0]),\(.at[1]) \(.size[0])x\(.size[1])"' | grim -g - - | swappy -f -
-bind = Ctrl Shift, 4, exec, slurp | grim -g - - | swappy -f -
-
-### ターミナルホットキー
-# titleにfloatを指定したghosttyのウィンドウを最初に起動して、それが $terminalWorkspace に表示されるようにする
-# TODO: titleではなくclassを指定できるようにしたい
-$terminalWorkspace = terminal
-workspace = special:$terminalWorkspace, monitor:DP-3
-windowrulev2 = monitor: DP-3,class:com.mitchellh.ghostty,title:float
-windowrulev2 = workspace special:$terminalWorkspace,class:com.mitchellh.ghostty,title:float
-windowrulev2 = float,class:com.mitchellh.ghostty,title:float
-windowrulev2 = center,class:com.mitchellh.ghostty,title:float
-windowrulev2 = size 50% 65%,class:com.mitchellh.ghostty,title:float
-bind = ALT, Space, togglespecialworkspace, $terminalWorkspace
-exec-once = ghostty --background-opacity=0.8 --title=float
+source = ./hyprland.conf.d/keybindings.conf
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
@@ -313,54 +95,18 @@ exec-once = ghostty --background-opacity=0.8 --title=float
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-# windowrulev2 = float,class:com.mitchellh.ghostty
-windowrulev2 = float,class:1Password
-windowrulev2 = center,class:1Password
-windowrulev2 = size 40% 50%, class:1Password
+windowrule {
+    name = 1password
+    match:class = 1Password
+    float = on
+    center = on
+    size = 40% 50%
+}
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrulev2 = suppressevent maximize, class:.*
+# windowrule = match:class .*, suppressevent maximize
 
 # Fix some dragging issues with XWayland
-windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+# windowrule = match:class ^$, match:title ^$, match:xwayland 1, match:floating 1, match:fullscreen 0, match:pinned 0, nofocus on
 
-
-### noctalia-shell ###
-exec-once = qs -c noctalia-shell
-
-general {
-  gaps_in = 5
-  gaps_out = 10
-}
-
-decoration {
-  rounding = 20
-  rounding_power = 2
-
-  shadow {
-    enabled = true
-    range = 4
-    render_power = 3
-    color = rgba(1a1a1aee)
-  }
-
-  blur {
-    enabled = true
-    size = 3
-    passes = 2
-    vibrancy = 0.1696
-  }
-}
-
-layerrule {
-  name = noctalia
-  match:namespace = noctalia-background-.*$
-  ignore_alpha = 0.5
-  blur = true
-  blur_popups = true
-}
+source = ./hyprland.conf.d/noctalia-shell.conf
