feat: hyprland groupの枠線の色を変更

--- a/config/hypr/hyprland.conf.d/look-and-feel.conf
+++ b/config/hypr/hyprland.conf.d/look-and-feel.conf
@@ -101,3 +101,19 @@ misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
+
+# https://wiki.hyprland.org/Configuring/Variables/#group
+# Tokyo Night theme colors
+group {
+    col.border_active = rgba(73dacaee)
+    col.border_inactive = rgba(565f89aa)
+    col.border_locked_active = rgba(ff9e64ee)
+    col.border_locked_inactive = rgba(414868aa)
+
+    groupbar {
+        font_size = 10
+        col.active = rgba(bb9af7ee)
+        col.inactive = rgba(24283baa)
+        text_color = rgba(a9b1d6ff)
+    }
+}
