fix: vim-tmux-navigatorwo

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -14,7 +14,7 @@ set -g @fzf-url-bind 'o'
 set -g @plugin 'laktak/extrakto'
 
 # vim-tmux-navigator
-set -g @plugin 'christoomey/vim-tmux-navigator'
+# set -g @plugin 'christoomey/vim-tmux-navigator'
 # set -g @vim_navigator_mapping_left "C-Left C-h"  # use C-h and C-Left
 # set -g @vim_navigator_mapping_right "C-Right C-l"
 # set -g @vim_navigator_mapping_up "C-k"
