feat: tmuxでlazygitを起動する

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -25,6 +25,7 @@ set -g @plugin 'laktak/extrakto'
 set-option -g mouse on
 
 bind \; popup -xC -yC -w95% -h95% -E -d "#{pane_current_path}" 'PATH="$HOME/.cache/.bun/bin:$PATH" lazygit' # lazygit上でbunを正しく開くためにbunのpathを渡す
+bind -n M-d popup -xC -yC -w95% -h95% -E -d "#{pane_current_path}" 'PATH="$HOME/.cache/.bun/bin:$PATH" lazygit' # lazygit上でbunを正しく開くためにbunのpathを渡す
 bind -n M-f resize-pane -Z
 
 # Alt + hjkl でペイン移動
