--- a/config/mise/config.toml
+++ b/config/mise/config.toml
@@ -33,3 +33,4 @@ rust = "latest"
 "cargo:diff-tui" = "latest"
 bun = "latest"
 "go:github.com/d-kuro/gwq/cmd/gwq" = "latest"
+"go:github.com/708u/twig/cmd/twig" = "latest"
